@@ -132,6 +132,78 @@ torch::jit::Node *binaryCrossEntropyHandler(torch::jit::Graph *graph,
   return createIdentityloss(graph, {final_node->output()}, reduction);
 }
 
+torch::jit::Node *nllLoss2dHandler(torch::jit::Graph *graph,
+                                   torch::jit::Node *node) {
+  // "aten::nll_loss2d(Tensor input, Tensor target, Tensor height, Tensor
+  // weight, int reduction, int ignore_index) -> Tensor"
+
+  // aten::nll_loss2d() is implemented based on popart:nllloss().
+  // Suppose the input[0] has the shape of (N, C, M, K)
+  // input[0] will be transposed with perm [0, 2, 3, 1],
+  //   and reshaped with (N * M * K, C), pushing C to the last dimension.
+  // input[1] will be reshaped to (N * M * K), before calling nllloss.
+  // The generated IRs are as follows:
+  // %37 : Tensor = popart::transpose[perm=[0, 2, 3, 1]](%35)
+  // %38 : Tensor(500:4, 4:1) = popart::reshape_static_shape[shape=[500,4]](%37)
+  // %39 : Int(500:1) = popart::reshape_static_shape[shape=[500]](%25)
+  // %40 : Float() = popart::nllloss[reduction=1, ignoreIndex=-100](%38, %39)
+
+  std::int64_t reduction = constantToLong(node->input(3)->node());
+  std::int64_t ignore_index = constantToLong(node->input(4)->node());
+
+  reduction = convertReduceToPopart(reduction);
+
+  torch::jit::Value *in = node->input(0); // in for input
+  torch::jit::Value *target = node->input(1);
+  std::vector<std::int64_t> shape_input = shapeFromTensor(in);
+  std::vector<std::int64_t> shape_target = shapeFromTensor(target);
+  ERROR_ON_MSG(shape_input.size() != 4,
+               "Dimension size for input[0] of aten::nll_loss2d() is: "
+                   << shape_input.size() << ", and expected 4");
+  ERROR_ON_MSG(shape_target.size() != 3,
+               "Dimension size for input[1] of aten::nll_loss2d() is: "
+                   << shape_target.size() << ", and expected 3");
+
+  std::int64_t n = shape_input[0];
+  std::int64_t c = shape_input[1];
+  std::int64_t height = shape_input[2];
+  std::int64_t width = shape_input[3];
+  std::int64_t n_1 = shape_target[0];
+  std::int64_t height_1 = shape_target[1];
+  std::int64_t width_1 = shape_target[2];
+  std::int64_t flat = n * height * width;
+  ERROR_ON_MSG(n != n_1,
+               "Dimension size mismatch: the parameter N from input[0] "
+                   << n << ", and target[0] " << n_1);
+  ERROR_ON_MSG(height != height_1,
+               "Dimension size mismatch: the input height and target height: "
+                   << height << " and " << height_1);
+  ERROR_ON_MSG(width != width_1,
+               "Dimension size mismatch: the input width and target width: "
+                   << width << ", and " << width_1);
+
+  std::vector<std::int64_t> input_new_shape({flat, c});
+  std::vector<std::int64_t> target_new_shape({flat});
+
+  torch::jit::Node *perm = createTranspose(graph, {in}, {0, 2, 3, 1});
+  torch::jit::Node *reshape_input =
+      createReshape(graph, perm->output(), input_new_shape);
+
+  torch::jit::Node *reshape_target =
+      createReshape(graph, target, target_new_shape);
+
+  torch::jit::Node *final_node =
+      createNllloss(graph, {reshape_input->output(), reshape_target->output()},
+                    reduction, ignore_index, /*inputIsLogProbability=*/true);
+
+  if (reduction == 2) {
+    // If "none" reduction, return the results with input's original shape
+    final_node = createReshape(graph, final_node->output(), shape_target);
+  }
+
+  return createIdentityloss(graph, {final_node->output()}, reduction);
+}
+
 torch::jit::Node *klDivHandler(torch::jit::Graph *graph,
                                torch::jit::Node *node) {
   // aten::kl_div(Tensor self, Tensor target, int reduction, bool log_target)
@@ -683,6 +755,7 @@ static bool handlers =
     registerHandlers(
         c10::aten::l1_loss, l1LossHandler,
         c10::aten::nll_loss, nllLossHandler,
+        c10::aten::nll_loss2d, nllLoss2dHandler,
         c10::aten::mse_loss, mseLossHandler,
         c10::aten::binary_cross_entropy, binaryCrossEntropyHandler,
         c10::aten::kl_div, klDivHandler,
